# llama.cpp

.github/workflows/: ai-issues.yml  auto-tag-llama-model-download.yml  build-3rd-party.yml  build-and-test-snapdragon.yml  build-android.yml  build-apple.yml  build-cache.yml  build-cann.yml  build-cross.yml  build-msys.yml  build-openvino.yml  build-riscv.yml  build-sanitize.yml  build-self-hosted.yml  build-sycl.yml  build-virtgpu.yml  build-vulkan.yml  build.yml  check-vendor.yml  close-issue.yml  code-style.yml  copilot-setup-steps.yml  docker.yml  editorconfig.yml  gguf-publish.yml  hip-quality-check.yml  labeler.yml  llama-model-download.yml  pre-tokenizer-hashes.yml  python-check-requirements.yml  python-lint.yml  python-type-check.yml  release.yml  server-sanitize.yml  server-self-hosted.yml  server.yml  ui-ci.yml  update-ops-docs.yml  winget.yml
tools/: CMakeLists.txt
tools/model-download/: CMakeLists.txt  arg.h  common.h  common_stubs.cpp  download.cpp  log.h  main.cpp  ms.cpp  ms.h
